# amplitude-to-sqlite

./: .cursorignore  .gitignore  Cargo.toml  README.md  fetch.sh  full  test-round-trip.json  todo
src/: amplitude_sdk.rs  amplitude_types.rs  compare.rs  config.rs  converter.rs  difference_cleaner.rs  duplicates.rs  exporter.rs  filter.rs  main.rs  parser.rs  project_selector.rs  uploader.rs  verifier.rs
src/common/: amplitude_sdk.rs  amplitude_types.rs  mod.rs  parser.rs
src/config/: config.rs
src/project/: exporter.rs  mod.rs  project_selector.rs  uploader.rs
src/transform/: compare.rs  difference_cleaner.rs  dupe_analyzer.rs  dupe_cleaner.rs  duplicates.rs  filter.rs  mod.rs  model.rs  verifier.rs
