[package]
name = "amplitude-things"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
tempfile = "3.20.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
